Updated files and additional images

--- a/about.html
+++ b/about.html
@@ -44,20 +44,26 @@
 		</div>
 	</nav><!-- Navigation bar -->
 
-	<div class="container ml-auto">
-		<div class="col-lg" id="page-header">
-			<h1>about me</h1>
-			<h2>long walks on the beach, etc.</h2>
-		</div>
-		<div class="row" id="body-copy">
-			<div class="col-lg-3 col-md-6 col-sm-12">
+	<div class="container body-copy">
+		<div class="row full-row">
+			<div class="col no-side-padding">
+				<h1>front-end developer. d&d enthusiast.</h1>
+			</div>
+		</div> <!-- summary heading -->
+
+		<div class="row">
+			<!-- <div class="col-lg-3 col-md-6 col-sm-12"> -->
+			<div class="col col-lg-3 col-md-6">
 				<img src="img/snapchat-selfie-cropped.jpg" class="rounded" alt="Snapchat selfie">
 			</div>
-			<div class="col-lg-6 col-md-6 col-sm-12">
-				<p>My name is Taylor Wilkinson and I'm a front-end web developer with a strong interest in user-experience design. I live in Vancouver and I'm pursing my B.Sc. in Interactive Arts and Technology with a concentration in Interactive Systems.</p>
-				<p>My goal as a developer and designer is to create applications that provide experiences that are enjoyable for the user while remaining considerate of a diverse userbase. As an articulate communicator, I'm able to engage with coworkers and clients alike to achieve the most desired result.</p>
+			<!-- <div class="col-lg-6 col-md-6 col-sm-12"> -->
+			<div class="col col-lg-6">
+				<!-- <h2>front-end developer. d&d enthusiast.</h2> -->
+				<p>Greetings, weary traveller. I'm a front-end web developer living in Vancouver, B.C.</p>
 			</div>
-		</div>
+		</div> <!-- end the first summary row -->
+
+		
     </div><!-- landing page content TBD -->
 
   	<script src="js/jquery.slim.min.js"></script>
