--- a/projects.html
+++ b/projects.html
@@ -44,13 +44,12 @@
 		</div>
 	</nav><!-- Navigation bar -->
 
-	<div class="container" id="filter-row">
+	<div class="container" id="filter-bar">
 		<div class="row">
 			<div class="col">
 				<!-- General Project Types -->
 				<button class="filter-button" data-filter="all">All</button>
 				<button class="filter-button" data-filter="web">Web Development</button>
-				<button class="filter-button" data-filter="mobile">Mobile</button>
 				<button class="filter-button" data-filter="java">Java</button>
 				<button class="filter-button" data-filter="graphics">Graphic Design</button>
 				<button class="filter-button" data-filter="communications">Communications</button>
@@ -61,62 +60,78 @@
 
 	<div class="container">
 		<!-- Form Validator -->
-
-		<!-- col-lg-4 col-md-4 col-sm-4 col-xs-6 -->
 		<div class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
 			<a href="work/validator.html">
 				<img src="img/placeholder-150x150.png" alt="placeholder square">
+				<h3>Form Validator</h3>
 			</a>
 		</div>
 		<!-- IAT 339 Portfolio -->
 		<div class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
 			<a href="work/first-portfolio.html">
 				<img src="img/placeholder-150x150-1.png" alt="placeholder square">
+				<h3>First Coded Portfolio</h3>
 			</a>
 		</div>
 		<!-- Sprout CU -->
 		<div class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
 			<a href="work/sprout.html">
 				<img src="img/placeholder-150x150-2.png" alt="placeholder square">
+				<h3>Sprout Credit Union</h3>
 			</a>
 		</div>
 		<!-- Helping Hand -->
-		<div class="project-preview col-sm-12 col-md-6 col-lg-3 filter mobile java">
+		<div class="project-preview col-sm-12 col-md-6 col-lg-3 filter java">
 			<a href="work/helping-hand.html">
 				<img src="img/placeholder-150x150-3.png" alt="placeholder square">
+				<h3>Helping Hand</h3>
 			</a>
 		</div>
 		<!-- Adoption Awareness -->
 		<div class="project-preview col-sm-12 col-md-6 col-lg-3 filter graphics communications">
 			<a href="work/adoption-awareness.html">
 				<img src="img/placeholder-150x150-4.png" alt="placeholder square">
+				<h3>Adoption Awareness Month</h3>
 			</a>
 		</div>
 		<!-- Studious Chef -->
 		<div class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
 			<a href="work/studious-chef.html">
 				<img src="img/placeholder-150x150-5.png" alt="placeholder square">
+				<h3>The Studious Chef</h3>
 			</a>
 		</div>
 		<!-- Sunday Morning Simulator -->
 		<div class="project-preview col-sm-12 col-md-6 col-lg-3 filter java graphics">
 			<a href="work/sunday-morning.html">
 				<img src="img/placeholder-150x150.png" alt="placeholder square">
+				<h3>Sunday Morning Simulator</h3>
 			</a>
 		</div>
 		<!-- Retrofit Your Home -->
 		<div class="project-preview col-sm-12 col-md-6 col-lg-3 filter web">
 			<a href="work/retrofit-your-home.html">
 				<img src="img/placeholder-150x150-1.png" alt="placeholder square">
+				<h3>Retrofit Your Home</h3>
 			</a>
 		</div>
 	</div> <!-- project previews -->
 
-	<footer>
-		<a href="https://github.com/TaylorWilkinson/" target="_blank">GitHub
-			<img class="icon" src="" alt="Github icon">
-		</a>
-	</footer>
+	<footer class="footer" id="portfolio-footer">
+		<div class="container">
+			<div class="row">
+				<a href="https://github.com/TaylorWilkinson/" target="_blank">
+					<img class="icon" src="img/github-logo.png" alt="GitHub logo">
+				</a>
+				<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+					<img class="icon" src="img/linkedin-logo.png" alt="LinkedIn logo">
+				</a>
+				<a href="mailto:tjwilkin@sfu.ca">
+					<img class="icon" src="img/email-logo.png" alt="Email envelope icon">
+				</a>
+			</div>
+		</div>
+	</footer> <!-- footer -->
 
   	<script src="js/jquery.slim.min.js"></script>
   	<script src="js/popper.min.js"></script>
