--- a/work/adoption-awareness.html
+++ b/work/adoption-awareness.html
@@ -26,7 +26,7 @@
 			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+			<a href="../index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
 				taylor wilkinson
 			</a><!-- inital icon -->
 
@@ -36,19 +36,163 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="projects.html" class="nav-item nav-link">PROJECTS</a>
+					<a href="../projects.html" class="nav-item nav-link">PROJECTS</a>
 					<a href="#" class="nav-item nav-link">RESUME</a>
-					<a href="about.html" class="nav-item nav-link">ABOUT</a>
+					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
 		</div>
 	</nav><!-- Navigation bar -->
 
-	<div class="container">
-    </div><!-- landing page content TBD -->
+
+	<div class="container body-copy">
+		<div class="row full-row">
+			<div class="col-lg-6 no-side-padding">
+				<h1>Adoption Awareness Month</h1>
+			</div>
+		</div> <!-- title section -->
+
+		<div class="row full-row">
+			<div class="col-xs-12 col-md-6 col-lg-6 no-side-padding">
+				<h2>technical</h2>
+				<div class="row">
+					<div class="col">
+						<p>Adobe Creative Suite</p>
+						<p>Graphic Design</p>
+						<p>Graphic Animation</p>
+						<p>Video Editing</p>
+					</div>
+					<div class="col">
+						<p>Interpersonal Communication<br>
+						<p>Copywriting</p>
+						<p>Press Release Writing</p>
+						<p>Social Media management</p>
+					</div>
+				</div>
+			</div>
+			<div class="col-xs-12 col-md-6 col-lg-6">
+				<h2>my roles</h2>
+				<p>Communications Co-ordinator</p>
+				<p>Project Lead</p>
+				<p>Primary Designer</p>
+				<p>Video Editor</p>
+			</div>
+		<!-- close project summary -->
+		</div>
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>brief</h2>
+				<p>November is Adoption Awareness Month, a month officially declared across Canada to celebrate all members of the adoption community, such as adoptees, adoptive families, birth families, and foster families.</p>
+				<p>Unlike in previous years, there was no external campaign to promote with the Ministry of Children and Families (MCFD) or other organization. Given that, our communications planning and social media campaign was fundamental to promoting Adoption Awareness Month to BC’s adoption community.</p>
+				<p>My role was to create videos and to design visual content (infographics, posters, banners, etc.) for social media, AFABC events, and for Focus On Adoption magazine. I was also responsible for organizing and promoting the “Light Up for Adoption Awareness” event across BC and running AFABC’s social media by curating content and monitoring audience response to Adoption Awareness Month activities.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						Photo of the Olympic Cauldron Arms in Vancouver lit green for World Adoption Day. November 2017.
+					</figcaption>
+				</figure>
+			</div>
+		</div><!-- end of section :: brief -->
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>social medica campaign planning</h2>
+				<p>I collaborated with the Communications team, which included the Publications Coordinator and the Communications Manager. We determined the primary message and goals for AFABC’s Adoption Awareness Month campaign. In this early stage, I learned about communications planning and developing effective messaging for digital content.</p>
+				<p>On my own, I researched what AFABC had done in previous years to understand the scope of the project. With my team, I watched a webinar about Adoption Awareness Month messaging provided by the North American Council on Adoptable Children. This webinar provided a wealth of information, and I learned how to effectively develop messages, especially for advocacy groups.</p>
+				<p>In these early meetings, we determined roles, responsibilities, and projects for the month. I suggested creating a series of videos for AFABC’s social media, which became my personal project. I also was in charge of coordinating our Light Up For Adoption Awareness event.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						Photo of my notes made during NACAC's webinar. September 2017.
+					</figcaption>
+				</figure>
+			</div>
+		</div><!-- end of section :: planning -->
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>what does family mean to you?</h2>
+				<p>The video campaign for Adoption Awareness Month was conceptualized and executed by myself, which made it my major contribution to the overall social media campaign. I came up with the idea during a team meeting with the goal of creating some short videos that would help to normalize adoption and celebrate adoptive families. My manager suggested using pre-recorded footage of adoptees and adoptive parents from a recent open house hosted by AFABC, as well as re-creating video bumpers that had been made for them several years prior.</p>
+				<p>After setting a project timeline to ensure that the videos would be ready for November 1st, I looked through the footage at my disposal and chose which videos were similar in tone and message. That way, I knew that the content would all connect and ensure a cohesive series of videos messages. Once deciding on the videos and messaging, I began creating both the video bumpers and finalized videos. I had no prior experience with Premiere Pro, which was what I had to work with, so I sought out online tutorials to teach myself the basics and learned on the job.</p>
+				<p>With a plan of only creating four videos, I was able to manage my time effectively and made six videos for the month: four that focused on young adoptees speaking about what the word “family” meant to them, and two that focused on giving advice for prospective adoptive parents and to kids going through the adoption process. They were well received on social media, getting the most engagement on Facebook as that’s where the majority of AFABC’s online followers are.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						Thumbnail made for one of the Adoption Awareness Month Videos. November 2017.
+					</figcaption>
+				</figure>
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						Screenshot of Premiere Pro workplace, displaying one of my Adoption Awareness Month video projects. November 2017.
+					</figcaption>
+				</figure>
+			</div>
+		</div><!-- end of section :: what does family... -->
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>light up for adoption awareness</h2>
+				<p>One of our main events was Light Up for Adoption Awareness. Several buildings across BC lit up green on November 9th and 10th for World Adoption Day. I researched and contacted businesses who could participate with our awareness event, as well as liaised with the three previously confirmed partners. After initiating contact with the various stakeholders, I was able to bring two more partners in: the Royal BC Museum in Victoria and the Vancouver Convention Centre, which included the Olympic Cauldron and surrounding district markers.</p>
+				<p>For this event, I was responsible for writing and releasing a press release in partnership with MCFD. This involved writing first iteration of the press release and then sending it to MCFD’s Communications department for a statement from Katrine Conroy, the Minister of Children and Family Development.</p>
+				<p>Once the event was finalized with the various buildings, I made sure that there was enough promotion leading up to, throughout, and following up the event. I coordinated getting pictures taken of local landmarks as well as getting pictures taken for locations outside of Vancouver. The end result was a successful awareness campaign which generated increased social media engagement thanks to the many organizations who shared the pictures, including the Executive Director of the Adoption Council of Canada who also sent a complimentary e-mail to AFABC’s Executive Director.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						Photo of The Sails at Canada Place lit green for World Adoption Day. November 2017.
+					</figcaption>
+				</figure>
+			</div>
+		</div><!-- end of section :: light up -->
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>reflections</h2>
+				<p>My contract with AFABC provided me with many opportunities for growth. When I began working with the Communications team, I knew that I was still interested in web-focused design and development but wanted to get the most out of my time with them. By fully committing to my role and taking part in several projects and design requests, I have a diverse set of work examples for my portfolio. I left the job with both new and improved sets of skills. By testing myself as a writer, designer, and as a person in a new professional environment, I proved to myself that I possess the level of commitment and motivation to succeed in my career.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						Photo of The Sails at Canada Place lit green for World Adoption Day. November 2017.
+					</figcaption>
+				</figure>
+			</div>
+		</div><!-- end of section :: reflections -->
+
+	</div>
+	<!-- landing page content TBD -->
+
+	<button onclick="topFunction()" id="backToTopButton" title="Go to top">Back To Top</button> <!-- Button to scroll back to top because, that's too much work! -->
+
+	<footer class="footer" id="portfolio-footer">
+		<div class="container">
+			<div class="row">
+				<a href="https://github.com/TaylorWilkinson/" target="_blank">
+					<img class="icon" src="../img/github-logo.png" alt="GitHub logo">
+				</a>
+				<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+					<img class="icon" src="../img/linkedin-logo.png" alt="LinkedIn logo">
+				</a>
+				<a href="mailto:tjwilkin@sfu.ca">
+					<img class="icon" src="../img/email-logo.png" alt="Email envelope icon">
+				</a>
+			</div>
+		</div>
+	</footer> <!-- footer -->
     
-  	<script src="js/jquery.slim.min.js"></script>
-  	<script src="js/popper.min.js"></script>
-  	<script src="js/bootstrap.min.js"></script>
+  	<script src="../js/jquery.slim.min.js"></script>
+  	<script src="../js/popper.min.js"></script>
+  	<script src="../js/bootstrap.min.js"></script>
+  	<script src="../js/scrollButton.js"></script>
 </body>
 </html>
