--- a/work/helping-hand.html
+++ b/work/helping-hand.html
@@ -26,7 +26,7 @@
 			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+			<a href="../index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
 				taylor wilkinson
 			</a><!-- inital icon -->
 
@@ -36,19 +36,67 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="projects.html" class="nav-item nav-link">PROJECTS</a>
+					<a href="../projects.html" class="nav-item nav-link">PROJECTS</a>
 					<a href="#" class="nav-item nav-link">RESUME</a>
-					<a href="about.html" class="nav-item nav-link">ABOUT</a>
+					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
 		</div>
 	</nav><!-- Navigation bar -->
 
-	<div class="container">
-    </div><!-- landing page content TBD -->
+
+	<div class="container body-copy">
+		<div class="row full-row">
+			<div class="col-lg-6 no-side-padding">
+				<h1>Helping Hand</h1>
+			</div>
+		</div> <!-- title section -->
+
+		<div class="row">
+			<div class="col-lg-4">
+				<h2>team</h2>
+				<p>Individual project</p>
+			</div>
+			<div class="col-lg-4">
+				<h2>tools</h2>
+				<p>XAMPP, MySQL, PHP, HTML, CSS, AJAX</p>
+			</div>
+			<div class="col-lg-4">
+				<h2>my role</h2>
+				<p>Web Developer & Designer</p>
+			</div>
+		<!-- close project summary -->
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>brief</h2>
+				<p>Develop a web application using a database of our own choosing that implements a set of required technologies. The final course project for Internet Computing Technologies (IAT 352). 2017.</p>
+			</div>
+		</div>
+	</div>
+	<!-- landing page content TBD -->
+
+	<button onclick="topFunction()" id="backToTopButton" title="Go to top">Back To Top</button> <!-- Button to scroll back to top because, that's too much work! -->
+
+	<footer class="footer" id="portfolio-footer">
+		<div class="container">
+			<div class="row">
+				<a href="https://github.com/TaylorWilkinson/" target="_blank">
+					<img class="icon" src="../img/github-logo.png" alt="GitHub logo">
+				</a>
+				<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+					<img class="icon" src="../img/linkedin-logo.png" alt="LinkedIn logo">
+				</a>
+				<a href="mailto:tjwilkin@sfu.ca">
+					<img class="icon" src="../img/email-logo.png" alt="Email envelope icon">
+				</a>
+			</div>
+		</div>
+	</footer> <!-- footer -->
     
-  	<script src="js/jquery.slim.min.js"></script>
-  	<script src="js/popper.min.js"></script>
-  	<script src="js/bootstrap.min.js"></script>
+  	<script src="../js/jquery.slim.min.js"></script>
+  	<script src="../js/popper.min.js"></script>
+  	<script src="../js/bootstrap.min.js"></script>
+  	<script src="../js/scrollButton.js"></script>
 </body>
 </html>
