--- a/work/sunday-morning.html
+++ b/work/sunday-morning.html
@@ -26,7 +26,7 @@
 			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+			<a href="../index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
 				taylor wilkinson
 			</a><!-- inital icon -->
 
@@ -36,19 +36,157 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="projects.html" class="nav-item nav-link">PROJECTS</a>
+					<a href="../projects.html" class="nav-item nav-link">PROJECTS</a>
 					<a href="#" class="nav-item nav-link">RESUME</a>
-					<a href="about.html" class="nav-item nav-link">ABOUT</a>
+					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
 		</div>
 	</nav><!-- Navigation bar -->
 
-	<div class="container">
-    </div><!-- landing page content TBD -->
+
+	<div class="container body-copy">
+		<div class="row full-row">
+			<div class="col-lg-6 no-side-padding">
+				<h1>Sunday Morning Simulator</h1>
+			</div>
+		</div> <!-- title section -->
+
+		<div class="row">
+			<div class="col-lg-4">
+				<h2>team</h2>
+				<p>Individual project</p>
+			</div>
+			<div class="col-lg-4">
+				<h2>tools</h2>
+				<p>Java, Eclipse IDE, Adobe Illustrator, Violet UML Editor</p>
+			</div>
+			<div class="col-lg-4">
+				<h2>my role</h2>
+				<p>Developer, UX Designer, Storyboarder</p>
+			</div>
+		<!-- close project summary -->
+		</div>
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>brief</h2>
+				<p>Design and code an interactive simulator using Java. A final course project for Multimedia Programming for Art and Design course (IAT 265). Fall 2016.</p>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>coding</h2>
+				<p>This application was entirely coded in Java within Eclipse. The goal of the project was to implement object-oriented programming, such as inheritance, encapsulation and polymorphism. We explored using packages, factory and decorator patterns, as well as getter and setter methods when creating our own applications.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						[caption to go here]
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>preview</h2>
+				<p>A screen recording of my program, running through Eclipse.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						[caption to go here]
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>storyboarding</h2>
+				<p>The concept behind my simulator was to emulate a relaxing Sunday morning, where the user makes themselves a nice drink and a slice of toast before watching TV. I began by sketching general storyboards to establish the overall tone and cartoon-y design I wanted. These storyboards also detailed the types of user interaction I wished to implement. The various dragging, dropping, clicking, and arrow-key controls were determined in this stage.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						[caption to go here]
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>uml diagram</h2>
+				<p>By building UML diagrams, I was able to determine the application's architecture. This allowed me have a better understanding of the program's architecture by visualizing the relationships between the various portions of the code (functions, classes, packages, etc.) These diagrams were created using Violet UML Editor.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						[caption to go here]
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>asset creation</h2>
+				<p>All background and interactive elements in the application were made by myself, using Adobe Illustrator.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						[caption to go here]
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>reflections</h2>
+				<p>One challenge I faced when developing this application was realizing that my original project proposal was perhaps too ambitious, given the course's time frame and other academic responsibilities. I had to step back and honestly reflect on my progress and what I'd be able to achieve before the deadline. By honestly reflecting on the situation I was able to present a completed product while still maintaining the core functionality that I envisioned.</p>
+				<p>To take this project to the next level, my next step would be to debug and perfect the code, such as improving the hit detection on picky elements like the mug. I would also figure out what went wrong with importing in Processing's sound library, and implement music and sound effects to provide the extra bit of character that I had planned from the beginning of this project.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="#" alt="alt statement to go here">
+					<figcaption>
+						[caption to go here]
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+	</div>
+	<!-- landing page content TBD -->
+
+	<button onclick="topFunction()" id="backToTopButton" title="Go to top">Back To Top</button> <!-- Button to scroll back to top because, that's too much work! -->
+
+	<footer class="footer" id="portfolio-footer">
+		<div class="container">
+			<div class="row">
+				<a href="https://github.com/TaylorWilkinson/" target="_blank">
+					<img class="icon" src="../img/github-logo.png" alt="GitHub logo">
+				</a>
+				<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+					<img class="icon" src="../img/linkedin-logo.png" alt="LinkedIn logo">
+				</a>
+				<a href="mailto:tjwilkin@sfu.ca">
+					<img class="icon" src="../img/email-logo.png" alt="Email envelope icon">
+				</a>
+			</div>
+		</div>
+	</footer> <!-- footer -->
     
-  	<script src="js/jquery.slim.min.js"></script>
-  	<script src="js/popper.min.js"></script>
-  	<script src="js/bootstrap.min.js"></script>
+  	<script src="../js/jquery.slim.min.js"></script>
+  	<script src="../js/popper.min.js"></script>
+  	<script src="../js/bootstrap.min.js"></script>
+  	<script src="../js/scrollButton.js"></script>
 </body>
 </html>
