--- a/styleguide.html
+++ b/styleguide.html
@@ -15,38 +15,76 @@
 	<!-- stylesheets -->
 	<link rel="stylesheet" href="css/main.css">
 	<link rel="stylesheet" href="css/flexbox.css">
+	<link rel="stylesheet" href="css/styleguide.css">
 
 	<!-- fonts -->
 	<link href="https://fonts.googleapis.com/css?family=Raleway:100,100i,200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i,900,900i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Spectral:200,200i,300,300i,400,400i,500,500i,600,600i,700,700i,800,800i" rel="stylesheet">
+
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i" rel="stylesheet">
 </head>
 <body>
-	<nav class="navbar navbar-light bg-white navbar-expand-sm" id="navbar-bg">
-		<div class="container-fluid">
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
-				<img id="tw-icon" src="img/icon.png" alt="Taylor Wilkinson portfolio icon">
-			</a><!-- inital icon -->
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
-				taylor wilkinson
-			</a><!-- inital icon -->
-
-			<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#toggleNavBar" aria-controls="toggleNavBar" aria-expanded="false" aria-label="Toggle navigation">
-				<span class="navbar-toggler-icon"></span>
-			</button> <!-- hamburger button -->
-
-			<div class="collapse navbar-collapse" id="toggleNavBar">
-				<div class="navbar-nav ml-auto">
-					<a href="projects.html" class="nav-item nav-link">PROJECTS</a>
-					<a href="#" class="nav-item nav-link">RESUME</a>
-					<a href="about.html" class="nav-item nav-link">ABOUT</a>
-				</div>
-			</div> <!-- Collapse -->
+	<div class="container-fluid body-copy">
+		<div class="row">
+			<h1>FONTS</h1>
+			<!-- please review https://www.awwwards.com/20-best-web-fonts-from-google-web-fonts-and-font-face.html -->
 		</div>
-	</nav><!-- Navigation bar -->
+		<div class="row">
+			<div class="col-1">
+				<h2>Original Combo:</h2>
+			</div>
+			<div class="col-3">
+				<h1>Header 1: Raleway</h1>
+				<h2>Header 2: Raleway</h2>
+				<h3>Header 3: Raleway</h3>
+				<p>Roboto: Paragraph level Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz 1 2 3 4 5 6 7 8 9 0 - = ! @ # $ % ^ & * ( ) _ +</p>
+			</div>
+			<div class="col-1">
+				&nbsp;
+			</div>
+			<div class="col-1">
+				<h2>OPTION 1:</h2>
+			</div>
+			<div class="col-3">
+				<h1 id="opt1-h">Header 1: Montserrat</h1>
+				<h2 id="opt1-h">Header 2: Montserrat</h2>
+				<h3 id="opt1-h">Header 3: Montserrat</h3>
+				<p id="opt1-p">Roboto: Paragraph level Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz 1 2 3 4 5 6 7 8 9 0 - = ! @ # $ % ^ & * ( ) _ +</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-1">
+				<h2>OPTION 2:</h2>
+			</div>
+			<div class="col-3">
+				<h1 id="opt2-h">Header 1: Spectral</h1>
+				<h2 id="opt2-h">Header 2: Spectral</h2>
+				<h3 id="opt2-h">Header 3: Spectral</h3>
+				<p id="opt2-p">Roboto: Paragraph level Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz 1 2 3 4 5 6 7 8 9 0 - = ! @ # $ % ^ & * ( ) _ +</p>
+			</div>
+			<div class="col-1">
+				&nbsp;
+			</div>
+			<div class="col-1">
+				<h2>OPTION 3:</h2>
+			</div>
+			<div class="col-3">
+				<h1 id="opt3-h">Header 1: </h1>
+				<h2 id="opt3-h">Header 2: </h2>
+				<h3 id="opt3-h">Header 3: </h3>
+				<p id="opt3-p">Roboto: Paragraph level Aa Bb Cc Dd Ee Ff Gg Hh Ii Jj Kk Ll Mm Nn Oo Pp Qq Rr Ss Tt Uu Vv Ww Xx Yy Zz 1 2 3 4 5 6 7 8 9 0 - = ! @ # $ % ^ & * ( ) _ +</p>
+			</div>
+		</div>
+
+		<div class="row">
+			&nbsp;
+		</div>
 
 
-
-	<div class="container-fluid">
+		<div class="row">
+			<h1>COLOURS</h1>
+		</div>
 		<div class="row">
 			<!-- SWATCH #1 -->
 			<div class="col-lg-2">
@@ -62,51 +100,32 @@
 	    	</div>
 		</div>
 	    <div class="row">
-	    	<!-- SWATCH #3 -->
 	    	<div class="col-lg-2">
 				<p>#2 -- Sailor Moon Pastels</p>
 			</div>
 	        <div class="col-lg-10">
-				<p class="grid-block swatch swa13">#219290</p>
-		        <p class="grid-block swatch swa14">#69C6B3</p>
-		        <p class="grid-block swatch swa15">#73C887</p>
-		        <p class="grid-block swatch swa16">#EFD485</p>
-		        <p class="grid-block swatch swa17">#F1B3A4</p>
-		        <p class="grid-block swatch swa18">#9479A2</p>
+				<p class="grid-block swatch swa7">#219290</p>
+		        <p class="grid-block swatch swa8">#69C6B3</p>
+		        <p class="grid-block swatch swa9">#73C887</p>
+		        <p class="grid-block swatch swa10">#EFD485</p>
+		        <p class="grid-block swatch swa11">#F1B3A4</p>
+		        <p class="grid-block swatch swa12">#9479A2</p>
 		        <img class="grid-block swatch" id="inspo-img" src="img/sailor-moon-still-square-swatch.png" alt="">
 		    </div>
 	    </div>
 	    <div class="row">
-	    	<!-- SWATCH #4 -->
 	    	<div class="col-lg-2">
 				<p>#3 -- Vivid Brights, from <a href="https://coolors.co/008dd5-fe4a49-ffe44f-ffffff-373f51">Coolors.co</a></p>
 			</div>
 	        <div class="col-lg-10">
-				<p class="grid-block swatch swa19">#008DD5</p>
-		        <p class="grid-block swatch swa20">#FE4A49</p>
-		        <p class="grid-block swatch swa21">#FFE44F</p>
-		        <p class="grid-block swatch swa22">#FFFFFF</p>
-		        <p class="grid-block swatch swa23">#373F51</p>
-		        <p class="grid-block swatch swa24">#000000</p>
+				<p class="grid-block swatch swa13">#008DD5</p>
+		        <p class="grid-block swatch swa14">#FE4A49</p>
+		        <p class="grid-block swatch swa15">#FFE44F</p>
+		        <p class="grid-block swatch swa16">#FFFFFF</p>
+		        <p class="grid-block swatch swa17">#373F51</p>
+		        <p class="grid-block swatch swa18">#000000</p>
 		    </div>
 	    </div>
-	    <div class="row">
-			<!-- SWATCH #2 -->
-			<div class="col-lg-2">	
-	        	<p>#4 -- Sunrise</p>
-			</div>
-	        <div class="col-lg-10">
-				<p class="grid-block swatch swa7">#C8251C</p>
-		        <p class="grid-block swatch swa8">#EC4417</p>
-		        <p class="grid-block swatch swa9">#FE6016</p>
-		        <p class="grid-block swatch swa10">#FE7A16</p>
-		        <p class="grid-block swatch swa11">#FEA120</p>
-		        <p class="grid-block swatch swa12">#659565</p>
-		    </div>
-	    </div>
-		
-        <!-- SWATCH #5 -->
-        <!-- SWATCH #6 -->
     </div><!-- palettes -->
 
 
