--- a/work/retrofit-your-home.html
+++ b/work/retrofit-your-home.html
@@ -26,7 +26,7 @@
 			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navLogo">
 				<img id="tw-icon" src="../img/icon.png" alt="Taylor Wilkinson portfolio icon">
 			</a><!-- inital icon -->
-			<a href="index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
+			<a href="../index.html" class="nav-item nav-link active navbar-brand" id="navNameText">
 				taylor wilkinson
 			</a><!-- inital icon -->
 
@@ -36,19 +36,158 @@
 
 			<div class="collapse navbar-collapse" id="toggleNavBar">
 				<div class="navbar-nav ml-auto">
-					<a href="projects.html" class="nav-item nav-link">PROJECTS</a>
+					<a href="../projects.html" class="nav-item nav-link">PROJECTS</a>
 					<a href="#" class="nav-item nav-link">RESUME</a>
-					<a href="about.html" class="nav-item nav-link">ABOUT</a>
+					<a href="../about.html" class="nav-item nav-link">ABOUT</a>
 				</div>
 			</div> <!-- Collapse -->
 		</div>
 	</nav><!-- Navigation bar -->
 
-	<div class="container">
-    </div><!-- landing page content TBD -->
+
+	<div class="container body-copy">
+		<div class="row full-row">
+			<div class="col-lg-6 no-side-padding">
+				<h1>Retrofit Your Home</h1>
+			</div>
+		</div> <!-- title section -->
+
+		<div class="row">
+			<div class="col-lg-4">
+				<h2>team</h2>
+				<p>April Diax, Salathiel Wells, Taylor Wilkinson</p>
+			</div>
+			<div class="col-lg-4">
+				<h2>tools</h2>
+				<p>AxureRP, HTML, CSS, Adobe Illustrator + Photoshop</p>
+			</div>
+			<div class="col-lg-4">
+				<h2>my role</h2>
+				<p>Web Developer; User Experience Developer</p>
+			</div>
+		<!-- close project summary -->
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>brief</h2>
+				<p>Design, code and present a responsive website about retrofitting your home, based on data provided by City Studio Vancouver. This was a group course project for Information Design course (IAT 235). 2015.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>coding</h2>
+				<p>All team members contributed to writing equal portions of the website's code. I coded environment page and it's two subsections. Additionally, I was responsible for consolidating all 11 pages and maintaining their responsive design. HTML5 and CSS were used to build the site.</p>
+			</div>
+			<div class="col-lg-6">
+				<pre>
+					<code>
+&lt;section class = "subpage-navigation"&gt;
+            &lt;div class="subpage-grid-col-1of1"&gt;
+            &lt;/div&gt;
+            &lt;div class="subpage-grid-col-1of2"&gt;
+            	&lt;div class="info-sections"&gt;
+                &lt;div&gt;&lt;img src = "img/efficiencyIcon.png" alt="house diagram" id="house"&gt;&lt;/div&gt;
+            	  &lt;div&gt;
+                  &lt;h3&gt;energy efficiency&lt;/h3&gt;
+            		&lt;/div&gt;
+            		&lt;div&gt;
+            		  &lt;p id="environment-nav"&gt;Having an updated system in your home means that there will be less wasted energy due to a more efficient system .&lt;/p&gt;
+            		&lt;/div&gt;
+            		&lt;div&gt;
+                  &lt;a href="energyEfficiency.html" class="button-default" id="environment-learn-button"&gt;Learn More&lt;/a&gt;
+                &lt;/div&gt;
+            	&lt;/div&gt;
+            &lt;/div&gt;
+            &lt;div class="subpage-grid-col-2of2"&gt;
+              &lt;div class="info-sections" id="lifestyle-section"&gt;
+                &lt;div&gt;&lt;img src = "img/energyGuideIcon.png" alt="house diagram"&gt;&lt;/div&gt;
+                &lt;div&gt;
+                  &lt;h3&gt;energy guide&lt;/h3&gt;
+            		&lt;/div&gt;
+            		&lt;div&gt;
+            		  &lt;p id="environment-nav"&gt;
+              			Even if you upgrade only one system, the overall efficiency of your home will benefit.
+            			&lt;/p&gt;
+            		&lt;/div&gt;
+            		&lt;div&gt;
+                  &lt;a href="energyGuide.html" class="button-default" id="lifestyle-learn-button"&gt;Learn More&lt;/a&gt;
+            		&lt;/div&gt;
+            	&lt;/div&gt;
+            &lt;/div&gt;
+            &lt;/section&gt;			
+					</code>
+				</pre>
+				<p class="snippet">Code snippet of code from Retrofit Your Home's "Enviornment" secondary navigation</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>information architecture</h2>
+				<p>After analyzing the provided data of 500 homes, we determined three factors to consider when retrofitting one's home: cost, environmental and lifestyle. This data allowed us to define our content, and determine the information architecture of our website through basic wireframing.</p>
+				<p>Wireframes at this stage were made by sketching or utilizing text to help us understand how the user would go through the website to achieve a given goal, whether it was learning about environmental factors or cost information.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="../img/retrofit-whiteboard.jpg" alt="Photograph of our team's sketching to determine information architecture">
+					<figcaption>
+						Photograph of our team's notes and sketches on a whiteboard. November 2015.
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>high fidelity wireframes</h2>
+				<p>After determining our desired user flow, we moved on to create higher fidelity wireframes of our website using Axure RP. In this phase we continued refining our content, created more detailed blocked elements and played with different interaction elements that we could incorporate.</p>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="../img/retrofit-wireframe.png" alt="Screengrab of a wireframe of an early design concept for the site">
+					<figcaption>
+						Screengrab of a wireframe of an early design concept for the site. December 2015.
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-lg-6">
+				<h2>reflections</h2>
+				<p>Given time constraints provided by the course, ensuring that the website was perfectly responsive and consistent became difficult when combining all of the pages. By referring to the static mock-ups our team had made as a guide, we were able to finesse the code until we had a final product that provided a fairly consistent experience across the entire site.</p>
+				<p>Our team had initially planned to use a carousel format for going through the website. However, we found issues with usability and felt that it inhibited how we wanted our user to move throughout the site. After several iterations, we decided on a full-page styled website, so the user would be able to easily access information from the landing page, and would allow for more meaningful user flow.</p>
+				<button class="cta-button" onclick="location.href='http://www.sfu.ca/~tjwilkin/IAT%20235/Project%204%20-%20April,%20Salathiel,%20Taylor/P04/landingPage.html'">SEE WEBSITE</button>
+			</div>
+			<div class="col-lg-6">
+				<figure>
+					<img src="../img/retrofit-screenshot.png" alt="Long screenshot of the 'Energy Efficiency' page from the Retrofit Your Home site">
+					<figcaption>
+						Screenshot of the final design of the "Energy Efficiency" page. December 2015.
+					</figcaption>
+				</figure>
+			</div>
+		</div>
+	</div> <!-- landing page content TBD -->
+
+	<button onclick="topFunction()" id="backToTopButton" title="Go to top">Back To Top</button> <!-- Button to scroll back to top because, that's too much work! -->
+
+	<footer class="footer" id="portfolio-footer">
+		<div class="container">
+			<div class="row">
+				<a href="https://github.com/TaylorWilkinson/" target="_blank">
+					<img class="icon" src="../img/github-logo.png" alt="GitHub logo">
+				</a>
+				<a href="https://www.linkedin.com/in/taylorjwilkinson/" target="_blank">
+					<img class="icon" src="../img/linkedin-logo.png" alt="LinkedIn logo">
+				</a>
+				<a href="mailto:tjwilkin@sfu.ca">
+					<img class="icon" src="../img/email-logo.png" alt="Email envelope icon">
+				</a>
+			</div>
+		</div>
+	</footer> <!-- footer -->
     
-  	<script src="js/jquery.slim.min.js"></script>
-  	<script src="js/popper.min.js"></script>
-  	<script src="js/bootstrap.min.js"></script>
+  	<script src="../js/jquery.slim.min.js"></script>
+  	<script src="../js/popper.min.js"></script>
+  	<script src="../js/bootstrap.min.js"></script>
+  	<script src="../js/scrollButton.js"></script>
 </body>
 </html>
